--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -4,11 +4,11 @@ on:
   pull_request:
     paths:
       - domains/certificates/**
-    paths-ignore:
-      - domains/auth/**
-      - domains/emissions/**
-      - domains/measurements/**
-      - domains/oidc-mock/**
+#    paths-ignore:
+#      - domains/auth/**
+#      - domains/emissions/**
+#      - domains/measurements/**
+#      - domains/oidc-mock/**
   push:
     branches:
       - main
