- Removed paths from paths-ignore - so the ignore file now only takes everything else than certificate domain - Bump version - Run echo changed for display in GitHub Summary

--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -15,6 +15,7 @@ env:
 
 jobs:
   sonar-analysis:
+    name: sonar-analysis
     runs-on: ubuntu-latest
     env:
       SOLUTION_NAME: "energinet-datahub_energy-origin_certificates"
