--- a/.github/workflows/sonar-analysis-ignore.yml
+++ b/.github/workflows/sonar-analysis-ignore.yml
@@ -2,13 +2,11 @@ name: SonarCloud
 on:
   pull_request:
     paths-ignore:
-      - domains/auth/**
-      - domains/emissions/**
-      - domains/measurements/**
-      - domains/oidc-mock/**
       - domains/certificates/**
 jobs:
   sonar-analysis:
+    name: sonar-analysis
     runs-on: ubuntu-latest
     steps:
-      - run: 'echo "No SonarCloud scan requied"'
+      - run: echo "::notice ::No Sonarcloud scan required"
+
