Trying to add "uses" in workflow file

--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -41,6 +41,7 @@ jobs:
           dotnet tool install --global dotnet-sonarscanner
 
       - name: Run Analysis
+        uses: sonarsource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
