--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -41,10 +41,13 @@ jobs:
           dotnet tool install --global dotnet-sonarscanner
 
       - name: Run Analysis
-        uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: bash
         working-directory: ${{ env.SOLUTION_PATH }}
-
+        run: |
+          dotnet sonarscanner begin -k:"${{ env.SOLUTION_NAME }}" -o:"${{ env.ORGANIZATION }}" -d:sonar.login="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io"
+          dotnet build
+          dotnet test --collect "Code Coverage"
+          dotnet sonarscanner end -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
