--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -52,7 +52,7 @@ jobs:
         shell: bash
         working-directory: ${{ env.SOLUTION_PATH }}
         run: |
-          dotnet sonarscanner begin -k:"${{ env.SOLUTION_NAME }}" -o:"${{ env.ORGANIZATION }}" -d:sonar.login="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io" -d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
+          dotnet sonarscanner begin -k:"${{ env.SOLUTION_NAME }}" -o:"${{ env.ORGANIZATION }}" -d:sonar.login="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io" -d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml"
           dotnet build
-          dotnet-coverage collect "dotnet test" -f xml  -o "coverage.xml"
+          dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
           dotnet sonarscanner end -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
