--- a/domains/certificates/Query.API/API.AppTests/API.AppTests.csproj
+++ b/domains/certificates/Query.API/API.AppTests/API.AppTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Testcontainers" Version="2.2.0" />
     <PackageReference Include="Verify.Xunit" Version="17.10.2" />
+    <PackageReference Include="WireMock.Net" Version="1.5.13" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
