--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -40,6 +40,11 @@ jobs:
         run: |
           dotnet tool install --global dotnet-sonarscanner
 
+      - name: Install dotnet-coverage
+        shell: bash
+        run: |
+          dotnet tool install --global dotnet-coverage
+
       - name: Run Analysis
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -47,7 +52,7 @@ jobs:
         shell: bash
         working-directory: ${{ env.SOLUTION_PATH }}
         run: |
-          dotnet sonarscanner begin -k:"${{ env.SOLUTION_NAME }}" -o:"${{ env.ORGANIZATION }}" -d:sonar.login="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io"
+          dotnet sonarscanner begin -k:"${{ env.SOLUTION_NAME }}" -o:"${{ env.ORGANIZATION }}" -d:sonar.login="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io" -d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml"
           dotnet build
-          dotnet test --collect "Code Coverage"
+          dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
           dotnet sonarscanner end -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
