--- a/domains/certificates/docker-test-env/docker-compose.yml
+++ b/domains/certificates/docker-test-env/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - martendb
 
   rabbitmq:
-    image: rabbitmq
+    image: rabbitmq:management
     ports:
       - 5672:5672
       - 15672:15672
