Reset auth domain and use dotnet 7

--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -76,7 +76,7 @@ jobs:
         run: |
           matrix=$(find domains -mindepth 1 -maxdepth 1 -type d | egrep "$PATTERN" | while read domain; do
             [ -f "$domain/.domain.json" ] || echo "{}" > "$domain/.domain.json"
-            echo '{"draft": false}' > "$domain/.default.domain.json"
+            echo '{"draft": false, "dotnetVersion": "6.0.101"}' > "$domain/.default.domain.json"
             settings=$(jq -srec '.[0] * .[1] | .path=$path' --arg path "$domain" "$domain/.default.domain.json" "$domain/.domain.json")
 
             draft=$(printf '%s' "$settings" | jq -rce '.draft')
@@ -152,6 +152,7 @@ jobs:
         uses: ./.github/actions/dotnet-validate-domain
         with:
           solution-file-folder: ${{ steps.resolver.outputs.service }}
+          dotnet-version: ${{ matrix.build.path.dotnetVersion }}
 
       - name: Build image
         uses: ./.github/actions/build-and-push-container
