--- a/domains/auth/.devcontainer/devcontainer.json
+++ b/domains/auth/.devcontainer/devcontainer.json
@@ -1,11 +1,12 @@
 {
-    "name": "C# (.NET)",
+    "name": "Auth domain",
     "build": {
         "dockerfile": "Dockerfile",
         "args": {}
     },
     "settings": {
-        "editor.formatOnSave": true
+        "editor.formatOnSave": true,
+        "omnisharp.enableRoslynAnalyzers": true
     },
     "extensions": [
         "EditorConfig.EditorConfig",
