--- a/domains/auth/Auth.API/API/Properties/launchSettings.json
+++ b/domains/auth/Auth.API/API/Properties/launchSettings.json
@@ -1,50 +1,41 @@
-{
-    "$schema": "https://json.schemastore.org/launchsettings.json",
-    "iisSettings": {
-        "windowsAuthentication": false,
-        "anonymousAuthentication": true,
-        "iisExpress": {
-            "applicationUrl": "http://localhost:64839",
-            "sslPort": 44305
-        }
-    },
-    "profiles": {
-        "API": {
-            "commandName": "Project",
-            "dotnetRunMessages": true,
-            "launchBrowser": true,
-            "launchUrl": "swagger",
-            "applicationUrl": "https://localhost:7231;http://localhost:5231",
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development",
-                "TermsMarkdownFolder": "A/beautiful/dir",
-                "InternalTokenSecret": "INTERNALTOKENSECRET",
-                "TokenExpiryTime": "1",
-                "AmrValues": "AMRVALUES",
-                "OidcUrl": "https://pp.netseidbroker.dk/op",
-                "OidcClientId": "OIDCCLIENTID",
-                "OidcClientSecret": "OIDCCLIENTSECRET",
-                "BaseUrl": "BASEURL",
-                "ServiceUrl": "https://localhost/api/auth",
-                "OidcLoginCallbackPath": "/auth/oidc/login/callback",
-                "IdTokenSecretKey": "mysmallkey123456",
-                "StateSecretKey": "mysmallkey123456",
-                "CookieName": "Authorization",
-                "CookiePath": "/",
-                "CookieDomain": "localhost",
-                "CookieHttpOnly": "true",
-                "CookieSameSite": "Strict",
-                "CookieSecure": "true",
-                "CookieExpiresTimeDelta": "6"
-            }
-        },
-        "IIS Express": {
-            "commandName": "IISExpress",
-            "launchBrowser": true,
-            "launchUrl": "swagger",
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        }
+﻿{
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:48878",
+      "sslPort": 44356
     }
+  },
+  "profiles": {
+    "http": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5111",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7297;http://localhost:5111",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    }
+  }
 }
