Add login endpoint

--- a/domains/auth/Auth.API/API/appsettings.json
+++ b/domains/auth/Auth.API/API/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Oidc:AuthorityUrl": "https://pp.netseidbroker.dk/op",
+    "Oidc:CacheDuration": "06:00:00",
+    "Oidc:ClientId": "625fa04a-4b17-4727-8066-82cf5b5a8b0d",
+    "Oidc:RedirectUri": "https://oidcdebugger.com/debug"
+
 }
