--- a/domains/auth/Auth.API/API/appsettings.json
+++ b/domains/auth/Auth.API/API/appsettings.json
@@ -6,9 +6,9 @@
         }
     },
     "AllowedHosts": "*",
-    "Oidc:AuthorityUrl": "https://pp.netseidbroker.dk/op",
+    "Oidc:AuthorityUri": "https://pp.netseidbroker.dk/op",
     "Oidc:CacheDuration": "06:00:00",
     "Oidc:ClientId": "625fa04a-4b17-4727-8066-82cf5b5a8b0d",
-    "Oidc:RedirectUri": "https://oidcdebugger.com/debug"
-
+    "Oidc:AuthorityCallbackUri": "https://oidcdebugger.com/debug",
+    "Oidc:FrontendRedirectUri": "https://example.com"
 }
