--- a/domains/auth/docker-environment/docker-compose.yml
+++ b/domains/auth/docker-environment/docker-compose.yml
@@ -1,45 +1,31 @@
-version: "3.8"
 services:
-  martendb:
-    image: sibedge/postgres-plv8
-    container_name: marten
-    hostname: marten.docker.internal
-    restart: unless-stopped
+  db:
+    image: postgres
+    container_name: local_pgdb
+    restart: always
     ports:
       - "5432:5432"
-    volumes:
-      - ./postgres-init-data/001-plv8.sql:/docker-entrypoint-initdb.d/001-plv8.sql
-      - ./sql:/sql
-    networks:
-      - postgres
     environment:
-      POSTGRES_DB: marten
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: Database
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    volumes:
+      - local_pgdata:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin4_container
-    restart: unless-stopped
+    restart: always
     ports:
       - "5050:80"
-    volumes:
-      - pgadmin:/var/lib/pgadmin
-      - ./servers.json:/pgadmin4/servers.json
-    networks:
-      - postgres
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.admin
       PGADMIN_DEFAULT_PASSWORD: admin
       PGADMIN_CONFIG_SERVER_MODE: "False"
       PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
-    depends_on:
-      - martendb
-
-networks:
-  postgres:
-    driver: bridge
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
 
 volumes:
-  martendb:
-  pgadmin:
+  local_pgdata:
+  pgadmin-data:
