--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -6,6 +6,6 @@
         }
     },
     "ConnectionStrings": {
-        "Db": "host=localhost;Port=5432;Database=marten;username=postgres;password=postgres;"
+        "Db": "host=localhost;Port=5432;Database=postgres;username=admin;password=admin;"
     }
 }
