--- a/domains/auth/Auth.API/Tests/Tests.csproj
+++ b/domains/auth/Auth.API/Tests/Tests.csproj
@@ -27,12 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\API\API.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="a-private-key.pem" CopyToOutputDirectory="PreserveNewest" />
-    <None Update="a-public-key.pem" CopyToOutputDirectory="PreserveNewest" />
+    <ProjectReference Include="../API/API.csproj" />
   </ItemGroup>
 
 </Project>
