--- a/domains/auth/Auth.API/API/appsettings.json
+++ b/domains/auth/Auth.API/API/appsettings.json
@@ -5,10 +5,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "Oidc:AuthorityUri": "https://pp.netseidbroker.dk/op",
-    "Oidc:CacheDuration": "06:00:00",
-    "Oidc:ClientId": "625fa04a-4b17-4727-8066-82cf5b5a8b0d",
-    "Oidc:AuthorityCallbackUri": "https://oidcdebugger.com/debug",
-    "Oidc:FrontendRedirectUri": "https://example.com"
+    "AllowedHosts": "*"
 }
