add masstransit rabbitmq

--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -10,5 +10,10 @@
     },
     "Datasync": {
         "Url": "http://data-sync-api"
+    },
+    "IntegrationEventBus": {
+        "Url": "localhost",
+        "Username": "guest",
+        "Password": "guest"
     }
 }
