--- a/domains/certificates/chart/values.yaml
+++ b/domains/certificates/chart/values.yaml
@@ -7,3 +7,12 @@ postgres:
     name: sibedge/postgres-plv8
     tag: 15.0-3.1.4-alpine
   size: 10Gi
+rabbitmq:
+  replicaCount: 1
+  image:
+    name: bitnami/rabbitmq-cluster-operator
+    tag: 2.1.0
+  auth:
+    username: user
+    password: "user" # Password has to be set in the env
+    #securePassword: true :: This shall be enabled after the password is saved securely
