--- a/domains/certificates/chart/templates/rabbitmq-deployment.yaml
+++ b/domains/certificates/chart/templates/rabbitmq-deployment.yaml
@@ -19,20 +19,19 @@ spec:
         - name: {{ .Release.Name }}-rabbitmq
           image: '{{ .Values.rabbitmq.image.name }}:{{ .Values.rabbitmq.image.tag }}'
           livenessProbe:
-            enabled: true
-            initialDelaySeconds: 120
-            timeoutSeconds: 20
-            periodSeconds: 30
-            failureThreshold: 6
-            successThreshold: 1
-          readinessProbe:
-            enabled: true
-            initialDelaySeconds: 10
-            timeoutSeconds: 20
-            periodSeconds: 30
+            exec:
+              command: ['rabbitmq-diagnostics', '-q', 'ping']
             failureThreshold: 3
-            successThreshold: 1
+            periodSeconds: 30
+            timeoutSeconds: 30
           ports:
             - containerPort: 5672
               name: rbmq
               protocol: TCP
+  rabbitmq:
+    additionalPlugins:
+      - rabbitmq_management
+      - rabbitmq_peer_discovery_k8s
+    additionalConfig: |
+    default_user = guest
+    default_pass = guest
