--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -5,6 +5,7 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "Cryptography:Key": "secretsecretsecretsecret",
     "ConnectionStrings": {
         "Db": "host=localhost;Port=5432;Database=postgres;username=admin;password=admin;"
     },
