--- a/domains/certificates/chart/Chart.yaml
+++ b/domains/certificates/chart/Chart.yaml
@@ -2,5 +2,10 @@ apiVersion: v2
 name: eo-certificates
 description: A chart containing the certificates domain.
 
+dependencies:
+  - name: rabbitmq
+    version: 2.1.0
+    repository: https://charts.bitnami.com/bitnami/rabbitmq-cluster-operator
+
 type: application
 version: 1.1.2
