--- a/domains/certificates/chart/templates/rabbitmq-cluster.yaml
+++ b/domains/certificates/chart/templates/rabbitmq-cluster.yaml
@@ -1,7 +1,7 @@
-  - apiVersion: rabbitmq.com/v1beta1
-    kind: RabbitmqCluster
-    metadata:
-      name: {{ .Release.Name }}-rabbitmq-cluster
-    spec:
-      service:
-        type: LoadBalancer
+apiVersion: rabbitmq.com/v1beta1
+kind: RabbitmqCluster
+metadata:
+  name: {{ .Release.Name }}-rabbitmq-cluster
+spec:
+  service:
+    type: LoadBalancer
