add of ekstradeploy

--- a/domains/certificates/chart/Chart.yaml
+++ b/domains/certificates/chart/Chart.yaml
@@ -2,5 +2,16 @@ apiVersion: v2
 name: eo-certificates
 description: A chart containing the certificates domain.
 
+extraDeploy:
+  - apiVersion: rabbitmq.com/v1beta1
+    kind: RabbitmqCluster
+    metadata:
+      name: rabbitmq-custom-configuration
+    spec:
+      replicas: 1
+      rabbitmq:
+        additionalConfig: |
+          log.console.level = debug
+
 type: application
 version: 1.1.2
