--- a/domains/certificates/chart/templates/rabbitmq-cluster.yaml
+++ b/domains/certificates/chart/templates/rabbitmq-cluster.yaml
@@ -1,10 +1,9 @@
-extraDeploy:
-  - apiVersion: rabbitmq.com/v1beta1
-    kind: RabbitmqCluster
-    metadata:
-      name: rabbitmq-custom-configuration
-    spec:
-      replicas: 1
-      rabbitmq:
-        additionalConfig: |
-          log.console.level = debug
+apiVersion: rabbitmq.com/v1beta1
+kind: RabbitmqCluster
+metadata:
+  name: {{ .Release.Name }}-rabbitmq-cluster
+spec:
+  replicas: 1
+  rabbitmq:
+    additionalConfig: |
+      log.console.level = debug
