--- a/domains/certificates/chart/templates/api-deployment.yaml
+++ b/domains/certificates/chart/templates/api-deployment.yaml
@@ -30,19 +30,24 @@ spec:
             - containerPort: 80
               name: http
               protocol: TCP
-          # env:
-          #   - name: RABBITMQ__HOST
-          #     valueFrom:
-          #       secretKeyRef:
-          #         name: {{ .Release.Name }}-rabbitmq-cluster-default-user
-          #         key: host
-          #   - name: RABBITMQ__USERNAME
-          #     valueFrom:
-          #       secretKeyRef:
-          #         name: {{ .Release.Name }}-rabbitmq-cluster-default-user
-          #         key: username
-          #   - name: RABBITMQ__PASSWORD
-          #     valueFrom:
-          #       secretKeyRef:
-          #         name: {{ .Release.Name }}-rabbitmq-cluster-default-user
-          #         key: password
+          env:
+            - name: RABBITMQ__HOST
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-rabbitmq-cluster-default-user
+                  key: host
+            - name: RABBITMQ__PORT
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-rabbitmq-cluster-default-user
+                  key: port
+            - name: RABBITMQ__USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-rabbitmq-cluster-default-user
+                  key: username
+            - name: RABBITMQ__PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-rabbitmq-cluster-default-user
+                  key: password
