wip:something important

--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -11,8 +11,9 @@
     "Datasync": {
         "Url": "http://data-sync-api"
     },
-    "IntegrationEventBus": {
-        "Url": "localhost",
+    "RabbitMq": {
+        "Host": "localhost",
+        "Port": "localhost",
         "Username": "guest",
         "Password": "guest"
     }
