--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -13,7 +13,7 @@
     },
     "RabbitMq": {
         "Host": "localhost",
-        "Port": "localhost",
+        "Port": "5672",
         "Username": "guest",
         "Password": "guest"
     }
