--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -18,6 +18,7 @@
     "Oidc:AuthorityUri": "https://pp.netseidbroker.dk/op",
     "Oidc:CacheDuration": "06:00:00",
     "Oidc:ClientId": "625fa04a-4b17-4727-8066-82cf5b5a8b0d",
+    "Oidc:ClientSecret": "not-the-secret",
     "Oidc:AuthorityCallbackUri": "https://oidcdebugger.com/debug",
     "Oidc:FrontendRedirectUri": "https://example.com"
 }
