Start implementation of integration tests

--- a/domains/auth/Auth.API/Tests/Tests.csproj
+++ b/domains/auth/Auth.API/Tests/Tests.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../API/API.csproj" />
+    <ProjectReference Include="..\Tests.Common\Tests.Common.csproj" />
   </ItemGroup>
 
 </Project>
