--- a/domains/certificates/Query.API/API/API.csproj
+++ b/domains/certificates/Query.API/API/API.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Marten" Version="5.11.0" />
     <PackageReference Include="MassTransit" Version="8.0.8" />
+    <PackageReference Include="MassTransit.Marten" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.11" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
