--- a/domains/certificates/Query.API/API.AppTests/API.AppTests.csproj
+++ b/domains/certificates/Query.API/API.AppTests/API.AppTests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Verify.Xunit" Version="17.10.2" />
     <PackageReference Include="WireMock.Net" Version="1.5.13" />
     <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit.analyzers" Version="1.1.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
