--- a/.github/actions/dotnet-check-license/action.yaml
+++ b/.github/actions/dotnet-check-license/action.yaml
@@ -48,12 +48,10 @@ runs:
       run: dotnet tool install --global dotnet-project-licenses --version ${{ inputs.tool-version }}
 
     - name: Add mapping argument
-      id: arguments
       shell: bash
       if: inputs.license-mapping-file
-      run: |
-        echo ::set-output name=arguments::--licenseurl-to-license-mappings ${{ inputs.license-mapping-file }}
+      run: echo "arguments=--licenseurl-to-license-mappings ${{ inputs.license-mapping-file }}" >> $GITHUB_STATE
 
     - name: Run license check
       shell: bash
-      run: ~/.dotnet/tools/dotnet-project-licenses -i ${{ inputs.project-folder }} --allowed-license-types ${{ inputs.allowed-licenses-file }} ${{ steps.arguments.outputs.arguments }}
+      run: ~/.dotnet/tools/dotnet-project-licenses -i ${{ inputs.project-folder }} --allowed-license-types ${{ inputs.allowed-licenses-file }} ${{ env.arguments }}
