--- a/.github/actions/get-semver/action.yaml
+++ b/.github/actions/get-semver/action.yaml
@@ -28,10 +28,11 @@ runs:
 
     - name: Guard against non-supported events
       if: ${{ github.event_name != 'push' && github.event_name != 'pull_request' }}
-      uses: actions/github-script@v6
-      with:
-        script: |
-          core.setFailed('Only "push" and "pull_request" events are supported by this action.')
+      shell: bash
+      run: |
+        echo "::error::Only "push" and "pull_request" events are supported by this action."
+        exit 1
+
     - uses: actions/checkout@v3
       with:
         path: ${{ inputs.git_checkout_folder }}
