--- a/.github/actions/helm-release-chart/action.yaml
+++ b/.github/actions/helm-release-chart/action.yaml
@@ -70,29 +70,18 @@ runs:
       shell: bash
       run: helm package --version ${{  inputs.chart_version }} ${{ inputs.chart_folder }}
 
-    - name: Create Release
-      id: create_release
-      if: ${{ inputs.dry_run != 'true' }}
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-      with:
-        tag_name: ${{ steps.chart-info.outputs.tag-name }}
-        release_name: Release ${{ steps.chart-info.outputs.tag-name }}
-        draft: false
-        prerelease: ${{ github.ref_name != 'main' }}
+    - name: Add prerelease argument
+      shell: bash
+      if: ${{ github.ref_name != 'main' }}
+      run: echo "prerelease=--prerelease" >> $GITHUB_STATE
 
-    - name: Add chart.tar to release
-      id: upload-release-asset
+    - name: Create Release
       if: ${{ inputs.dry_run != 'true' }}
-      uses: actions/upload-release-asset@v1
+      shell: bash
       env:
         GITHUB_TOKEN: ${{ github.token }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ env.filename }}
-        asset_name: ${{ env.filename }}
-        asset_content_type: application/zip
+      run: |
+        gh release create "${{ steps.chart-info.outputs.tag-name }}" --repo '${{ github.repository }}' --title "Release ${{ steps.chart-info.outputs.tag-name }}" ${{ env.prerelease }} "./${{ env.filename }}"
 
     - name: Checkout chart repository
       if: ${{ inputs.dry_run != 'true' }}
