--- a/domains/emissions/Emissions.API/Tests/Tests.csproj
+++ b/domains/emissions/Emissions.API/Tests/Tests.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\API\API.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Resources/**" CopyToOutputDirectory="PreserveNewest" LinkBase="Resources/" />
+  </ItemGroup>
+
 </Project>
