--- a/.github/actions/dotnet-check-license/action.yaml
+++ b/.github/actions/dotnet-check-license/action.yaml
@@ -50,8 +50,8 @@ runs:
     - name: Add mapping argument
       shell: bash
       if: inputs.license-mapping-file
-      run: echo "arguments=--licenseurl-to-license-mappings ${{ inputs.license-mapping-file }}" >> $GITHUB_STATE
+      run: echo "ARGUMENTS=--licenseurl-to-license-mappings ${{ inputs.license-mapping-file }}" >> $GITHUB_ENV
 
     - name: Run license check
       shell: bash
-      run: ~/.dotnet/tools/dotnet-project-licenses -i ${{ inputs.project-folder }} --allowed-license-types ${{ inputs.allowed-licenses-file }} ${{ env.arguments }}
+      run: ~/.dotnet/tools/dotnet-project-licenses -i ${{ inputs.project-folder }} --allowed-license-types ${{ inputs.allowed-licenses-file }} ${{ env.ARGUMENTS }}
