--- a/.github/actions/dotnet-check-license/action.yaml
+++ b/.github/actions/dotnet-check-license/action.yaml
@@ -41,19 +41,17 @@ runs:
     - uses: actions/checkout@v3
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1.9.0
+      uses: actions/setup-dotnet@v3
 
     - name: Install license tool
       shell: bash
       run: dotnet tool install --global dotnet-project-licenses --version ${{ inputs.tool-version }}
 
     - name: Add mapping argument
-      id: arguments
       shell: bash
       if: inputs.license-mapping-file
-      run: |
-        echo ::set-output name=arguments::--licenseurl-to-license-mappings ${{ inputs.license-mapping-file }}
+      run: echo "ARGUMENTS=--licenseurl-to-license-mappings ${{ inputs.license-mapping-file }}" >> $GITHUB_ENV
 
     - name: Run license check
       shell: bash
-      run: ~/.dotnet/tools/dotnet-project-licenses -i ${{ inputs.project-folder }} --allowed-license-types ${{ inputs.allowed-licenses-file }} ${{ steps.arguments.outputs.arguments }}
+      run: ~/.dotnet/tools/dotnet-project-licenses -i ${{ inputs.project-folder }} --allowed-license-types ${{ inputs.allowed-licenses-file }} ${{ env.ARGUMENTS }}
